--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.10.0
+  http: ^1.2.2
+  json_serializable: ^6.9.2
+  shared_preferences: ^2.3.4
+  crypto: ^3.0.6
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
