--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,15 @@ dependencies:
   shared_preferences: ^2.3.4
   crypto: ^3.0.6
   logger: ^2.5.0
-  location: ^7.0.1
   intl: ^0.20.1
   sqflite: ^2.4.1
   path_provider: ^2.1.5
-  background_locator: ^1.6.12
-  flutter_local_notifications: ^18.0.1
   path: ^1.9.0
+  geolocator: ^13.0.2
+  flutter_background_service: ^5.1.0
+  flutter_local_notifications: ^18.0.1
+  permission_handler: ^11.3.1
+  geofence_foreground_service: ^1.1.3
 
 dev_dependencies:
   flutter_test:
